# game-of-life

./: .gitignore  CMakeLists.txt  README.md  cpp.hint
src/: CMakeLists.txt  cell.cpp  cell.h  gamefield.cpp  gamefield.h  gamelogic.cpp  gamelogic.h  global.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  neighborfinder.cpp  neighborfinder.h
